force-app/main/default/objects/Freight__c/Freight__c.object-meta.xml
<CustomObject>
    <label>Freight</label>
    <nameField>
        <displayFormat>FRE-{000}</displayFormat>
        <label>Freight Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Freights</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>