force-app/main/default/objects/Freight__c/fields/Container_Capacity__c.field-meta.xml
<CustomField>
    <fullName>Container_Capacity__c</fullName>
    <label>Container Capacity</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>