force-app/main/default/objects/Freight__c/fields/Freight_log__c.field-meta.xml
<CustomField>
    <fullName>Freight_log__c</fullName>
    <label>Freight_log</label>
    <type>TextArea</type>
</CustomField>