force-app/main/default/objects/Freight__c/fields/Freight_Status__c.field-meta.xml
<CustomField>
    <fullName>Freight_Status__c</fullName>
    <label>Freight Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Scheduled</fullName>
            </value>
            <value>
                <fullName>Inbound</fullName>
            </value>
            <value>
                <fullName>Outbound</fullName>
            </value>
            <value>
                <fullName>Loading</fullName>
            </value>
            <value>
                <fullName>Off Loading</fullName>
            </value>
            <value>
                <fullName>Destroyed</fullName>
            </value>
            <value>
                <fullName>In Hangar</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>