force-app/main/default/objects/Freight__c/fields/Inbound_Arrived_Date__c.field-meta.xml
<CustomField>
    <fullName>Inbound_Arrived_Date__c</fullName>
    <label>Inbound Arrived Date</label>
    <type>Date</type>
</CustomField>