force-app/main/default/objects/Freight__c/fields/Inbound_Departure_Date__c.field-meta.xml
<CustomField>
    <fullName>Inbound_Departure_Date__c</fullName>
    <label>Inbound Departure Date</label>
    <type>Date</type>
</CustomField>