force-app/main/default/objects/Freight__c/fields/Inbound_Travel_Time__c.field-meta.xml
<CustomField>
    <fullName>Inbound_Travel_Time__c</fullName>
    <formula>Inbound_Arrived_Date__c -  Inbound_Departure_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Inbound Travel Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>