force-app/main/default/objects/Freight__c/fields/Mining_Project_Id__c.field-meta.xml
<CustomField>
    <fullName>Mining_Project_Id__c</fullName>
    <label>Mining Project Id</label>
    <referenceTo>Mining_Project_Id__c</referenceTo>
    <relationshipLabel>Freights</relationshipLabel>
    <relationshipName>Freights</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>