force-app/main/default/objects/Freight__c/fields/Number_of_Containers__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Containers__c</fullName>
    <label>Number of Containers</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>