force-app/main/default/objects/Freight__c/fields/Outbound_Arrival_Date__c.field-meta.xml
<CustomField>
    <fullName>Outbound_Arrival_Date__c</fullName>
    <label>Outbound Arrival Date</label>
    <type>Date</type>
</CustomField>