force-app/main/default/objects/Freight__c/fields/Outbound_Departure_Date__c.field-meta.xml
<CustomField>
    <fullName>Outbound_Departure_Date__c</fullName>
    <label>Outbound Departure Date</label>
    <type>Date</type>
</CustomField>