force-app/main/default/objects/Freight__c/fields/Outboune_Travel_Time__c.field-meta.xml
<CustomField>
    <fullName>Outboune_Travel_Time__c</fullName>
    <formula>Outbound_Arrival_Date__c -  Outbound_Departure_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Outboune Travel Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>