force-app/main/default/objects/Freight__c/fields/Total_Freight_Load__c.field-meta.xml
<CustomField>
    <fullName>Total_Freight_Load__c</fullName>
    <description>Total Freight load</description>
    <formula>Number_of_Containers__c  *  Container_Capacity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Freight Load</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>